# huggingface-chatbot

./: .gitignore  README.md  pyproject.toml
chroma_docs/: chroma-collections.parquet
chroma_docs/index/: id_to_uuid_69aaf9eb-44ff-4158-9e87-d072a11dc295.pkl  index_metadata_69aaf9eb-44ff-4158-9e87-d072a11dc295.pkl  uuid_to_id_69aaf9eb-44ff-4158-9e87-d072a11dc295.pkl
src/: bot.py  config.yaml  test.ipynb  text_extractor.py  utils.py
